AUTOMAKE_OPTIONS = subdir-objects
bin_PROGRAMS = Dragon2D
AM_CXXFLAGS = $(INTI_CFLAGS) -std=c++11

Dragon2D_SOURCES = Classes/Audio.h Classes/GameManager.cpp Classes/GameManager.h Classes/ResourceManager.h Classes/ScriptEngine.h Classes/ScriptLibHelper.h Classes/ScriptLibHelper.cpp Classes/BaseClass.cpp Classes/BaseClass.h Classes/Env.h Classes/Env.cpp Dragon2D.cpp Dragon2D.h base.h
Dragon2D_LDADD = -lSDL2 $(INTI_LIBS)
